discussion/jgit/163403/163403_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix ProtectedMembersInFinalClass warning flagged by error prone

Running recent error prone version complaining on that code:

CharacterHead.java:22: error: [ProtectedMembersInFinalClass] Make
members of final classes package-private: <init>
	protected CharacterHead(char expectedCharacter) {
	          ^
    (see https://errorprone.info/bugpattern/ProtectedMembersInFinalClass)
  Did you mean 'CharacterHead(char expectedCharacter) {'

Bug: 562756
Change-Id: Ic46a0b07e46235592f6e63db631f583303420b73
Signed-off-by: David Ostrovsky <david@ostrovsky.org>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: David Pursehouse
Date: 2020-06-02 02:51:45.000000000
Message: 
Patch Set 3: Patch Set 2 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-02 02:51:54.000000000
Message: 
Patch Set 3:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3256/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-02 03:53:26.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3256/ : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-02 06:31:32.000000000
Message: 
Patch Set 3: -Verified

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3259/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-02 07:32:18.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3259/ : FAILURE
----------------------------------------------------------------------------------------------------------------------
